<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.diegog.mascotas.menu.Contacto">

    <include
        android:id="@+id/mascotaActionBar"
        layout="@layout/actionbar_mascota"
        >

    </include>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mascotaActionBar">

        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNombre">

        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electronico"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCorreo">

        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/mensaje"
            android:height="@dimen/textSize"
            android:inputType="textLongMessage|text|textMultiLine" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMensaje"
        >

        <android.support.design.widget.FloatingActionButton

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/fivestar"
            android:hint="@string/enviar"/>


    </android.support.design.widget.TextInputLayout>


</RelativeLayout>
